<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_sortByPopular"
        android:title="@string/action_sortByPopular"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_sortByTopRated"
        android:title="@string/action_sortByTopRated"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_favorites"
        android:title="@string/action_favorites"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
